:100: Collider function with timer

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="timer"></div>
     <canvas id="gameBoard" width="500" height="500"> </canvas>
 
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
   </body>
 </html>
