:heavy_plus_sign: Added views for GameLost and GameWin scenarios

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,26 @@
   </head>
   <body>
     <div class="timer"></div>
-    <canvas id="gameBoard" width="500" height="500"> </canvas>
-
+    <canvas id="gameBoard"> </canvas>
+    <div class="gamewon">
+      <div class="headlineSection">
+        <h1>You won the game in</h1>
+      </div>
+      <div class="timeSection">
+        <p></p>
+      </div>
+      <div class="buttonSection">
+        <button>Restart</button>
+      </div>
+    </div>
+    <div class="gamelost">
+      <div class="headlineSection">
+        <h1>You lost the game!</h1>
+      </div>
+      <div class="buttonSection">
+        <button>Restart</button>
+      </div>
+    </div>
     <script src="main2.js"></script>
   </body>
 </html>
